[Sema] Exclude unavailable enum cases from synthesized RawRepresentable initializer

Do not include unavailable enum cases in the switch statement used inside the synthesized RawRepresentable initializer. This usage would cause an error to be emitted due to the attempted use of the case.
This resolves SR-9094